--- a/src/_blog/20230624-empezando.mdx
+++ b/src/_blog/20230624-empezando.mdx
@@ -1,3 +1,7 @@
+---
+title: Empezando con TypeScript
+---
+
 # Empezando con TypeScript
 
 Hola muy buenas. Si estas o tienes intención de empezar a programar y
